# ChatLlamaAI

./: README.md  angular.json  package.json  pnpm-lock.yaml
src/: custom-theme.scss  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: about.rs  lib.rs  main.rs
src-tauri/src/controllers/: about.rs  ai.rs  auth.rs  chats.rs  messages.rs  mod.rs  mongodb.rs  public_chat.rs  users.rs
src-tauri/src/models/: ai_history.rs  ai_message.rs  ai_request.rs  ai_response.rs  auth_form.rs  chat.rs  message.rs  message_full.rs  mod.rs  public_chat.rs  public_chat_full.rs  reg_form.rs  reset_form.rs  response.rs  user_data.rs
src-tauri/src/services/: about.rs  ai.rs  auth.rs  chats.rs  manage_token.rs  messages.rs  mod.rs  mongodb.rs  public_chat.rs  users.rs
src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/guards/: auth.guard.ts
src/app/helpers/: common.ts  http-options.ts
src/app/models/: auth_form.ts  chat.ts  message.ts  message_full.ts  profile.ts  public_chat.ts  public_chat_full.ts  reg_form.ts  response.ts  user.ts
src/app/services/: about.service.ts  auth.service.ts  change-password.service.ts  chats.service.ts  event.service.ts  md-parse.service.ts  messages.service.ts  mongodb.service.ts  reset-password.service.ts  shared-links.service.ts  users.service.ts
src/app/views/about/: about.component.html  about.component.ts
src/app/views/change-password/: change-password.component.html  change-password.component.ts
src/app/views/chat/: chat.component.html  (+1 more)
src/environments/: environment.ts
(+31 files in other folders)
